<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="userModel"
            type="com.example.task_final_s6.ImageModel" />
    </data>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/primary_2"
        tools:context=".view.fragment.LoginFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="1000dp">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/TextTitle.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="32dp"
                        android:text="@string/profile"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.coordinatorlayout.widget.CoordinatorLayout
                        android:id="@+id/coordinator"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.4"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView">

                        <ImageView
                            android:id="@+id/ProfileImage"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="16dp"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_person"
                            app:layout_constraintEnd_toEndOf="@+id/textView"
                            app:layout_constraintStart_toStartOf="@+id/textView"
                            app:layout_constraintTop_toBottomOf="@+id/textView"
                            app:tint="@color/primary_light" />

<!--                        <ImageView-->
<!--                            android:id="@+id/imgPickImage"-->
<!--                            android:layout_width="30dp"-->
<!--                            android:layout_height="30dp"-->
<!--                            android:src="@drawable/ic_camera"-->
<!--                            app:layout_anchor="@id/imageView"-->
<!--                            app:layout_anchorGravity="end|center"-->
<!--                            app:tint="@color/abuabuabu" />-->


                    </androidx.coordinatorlayout.widget.CoordinatorLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_username"
                        style="@style/TextInputLayoutPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="32dp"
                        app:errorIconDrawable="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/coordinator">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:singleLine="true"
                            android:textColor="@color/secondary" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_email"
                        style="@style/TextInputLayoutPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        app:errorIconDrawable="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_username">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:singleLine="true"
                            android:textColor="@color/secondary" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_full_name"
                        style="@style/TextInputLayoutPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        app:errorIconDrawable="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_full_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/full_name"
                            android:singleLine="true"
                            android:textColor="@color/secondary" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_date_of_birth"
                        style="@style/TextInputLayoutPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        app:errorIconDrawable="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_full_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_date_of_birth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/date_of_birth"
                            android:singleLine="true"
                            android:textColor="@color/secondary" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_address"
                        style="@style/TextInputLayoutPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        app:errorIconDrawable="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_date_of_birth">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address"
                            android:singleLine="true"
                            android:textColor="@color/secondary" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        style="@style/TextInputLayoutPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        app:errorIconDrawable="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_address">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:singleLine="true"
                            android:textColor="@color/secondary" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_confirm_password"
                        style="@style/TextInputLayoutPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="32dp"
                        app:errorIconDrawable="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password"
                            android:singleLine="true"
                            android:textColor="@color/secondary" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_update"
                        style="@style/ButtonPrimary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/update"
                        android:textAllCaps="false"
                        app:layout_constraintEnd_toEndOf="@+id/til_confirm_password"
                        app:layout_constraintStart_toStartOf="@+id/til_confirm_password"
                        app:layout_constraintTop_toBottomOf="@+id/til_confirm_password" />

                    <Button
                        android:id="@+id/btn_logout"
                        style="@style/ButtonPrimary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="@string/logout"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        app:layout_constraintEnd_toEndOf="@+id/btn_update"
                        app:layout_constraintStart_toStartOf="@+id/btn_update"
                        app:layout_constraintTop_toBottomOf="@+id/btn_update" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</layout>